src/ui_tests/pass_zero_const-err.rs
const _: () = {
    let _ = notzero::nz!(0u8);
};

fn main() {}